[package]
name = "merkle_proof_verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "1.0.2", features = ["abigen", "rustls"] }
async-std = "1.10.0"
tokio = { version = "1.24.1", features = ["full"] }
